--- a/src/VectorMath.csproj
+++ b/src/VectorMath.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile></DocumentationFile>
+    <DocumentationFile>C:\Users\parker03\net-comments-parkerlange\src\VectorMath.xml</DocumentationFile>
   </PropertyGroup>
 
 </Project>
